lua/parser/LuaParser.py
# Generated from Lua.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LuaParser ( Parser ):

    grammarFileName = "Lua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'break'", "'do'", "'end'", 
                     "'while'", "'repeat'", "'until'", "'if'", "'then'", 
                     "'elseif'", "'else'", "'for'", "','", "'in'", "'function'", 
                     "'local'", "'<'", "'const'", "'close'", "'>'", "'return'", 
                     "'::'", "'.'", "':'", "'nil'", "'false'", "'true'", 
                     "'('", "')'", "'['", "']'", "'...'", "'{'", "'}'", 
                     "'or'", "'and'", "'<='", "'>='", "'~='", "'=='", "'..'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", "'&'", "'|'", 
                     "'~'", "'<<'", "'>>'", "'not'", "'#'", "'^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NAME", "NORMALSTRING", "CHARSTRING", 
                      "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", 
                      "COMMENT", "LINE_COMMENT", "WS", "SHEBANG" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_blockLoop = 2
    RULE_statLoop = 3
    RULE_stat = 4
    RULE_attnamelist = 5
    RULE_attrib = 6
    RULE_laststatLoop = 7
    RULE_laststatB = 8
    RULE_laststat = 9
    RULE_label = 10
    RULE_funcname = 11
    RULE_varlist = 12
    RULE_namelist = 13
    RULE_explist = 14
    RULE_exp = 15
    RULE_prefixexp = 16
    RULE_functioncall = 17
    RULE_varOrExp = 18
    RULE_var = 19
    RULE_varSuffix = 20
    RULE_nameAndArgs = 21
    RULE_args = 22
    RULE_argsCall = 23
    RULE_functiondef = 24
    RULE_funcbody = 25
    RULE_parlist = 26
    RULE_tableconstructor = 27
    RULE_fieldlist = 28
    RULE_field = 29
    RULE_fieldsep = 30
    RULE_operatorOr = 31
    RULE_operatorAnd = 32
    RULE_operatorComparison = 33
    RULE_operatorStrcat = 34
    RULE_operatorAddSub = 35
    RULE_operatorMulDivMod = 36
    RULE_operatorBitwise = 37
    RULE_operatorUnary = 38
    RULE_operatorPower = 39
    RULE_number = 40
    RULE_string = 41

    ruleNames =  [ "chunk", "block", "blockLoop", "statLoop", "stat", "attnamelist", 
                   "attrib", "laststatLoop", "laststatB", "laststat", "label", 
                   "funcname", "varlist", "namelist", "explist", "exp", 
                   "prefixexp", "functioncall", "varOrExp", "var", "varSuffix", 
                   "nameAndArgs", "args", "argsCall", "functiondef", "funcbody", 
                   "parlist", "tableconstructor", "fieldlist", "field", 
                   "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
                   "operatorStrcat", "operatorAddSub", "operatorMulDivMod", 
                   "operatorBitwise", "operatorUnary", "operatorPower", 
                   "number", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    NAME=57
    NORMALSTRING=58
    CHARSTRING=59
    LONGSTRING=60
    INT=61
    HEX=62
    FLOAT=63
    HEX_FLOAT=64
    COMMENT=65
    LINE_COMMENT=66
    WS=67
    SHEBANG=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ChunkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChunk" ):
                listener.enterChunk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChunk" ):
                listener.exitChunk(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.block()
            self.state = 85
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def laststat(self):
            return self.getTypedRuleContext(LuaParser.LaststatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188621320914) != 0):
                self.state = 87
                self.stat()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 93
                self.laststat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statLoop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatLoopContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatLoopContext,i)


        def laststatLoop(self):
            return self.getTypedRuleContext(LuaParser.LaststatLoopContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_blockLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockLoop" ):
                listener.enterBlockLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockLoop" ):
                listener.exitBlockLoop(self)




    def blockLoop(self):

        localctx = LuaParser.BlockLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blockLoop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 96
                    self.statLoop() 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3 or _la==22:
                self.state = 102
                self.laststatLoop()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(LuaParser.VarlistContext,0)


        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def label(self):
            return self.getTypedRuleContext(LuaParser.LabelContext,0)


        def blockLoop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BlockLoopContext)
            else:
                return self.getTypedRuleContext(LuaParser.BlockLoopContext,i)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def statLoop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatLoopContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatLoopContext,i)


        def laststatB(self):
            return self.getTypedRuleContext(LuaParser.LaststatBContext,0)


        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)


        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def attnamelist(self):
            return self.getTypedRuleContext(LuaParser.AttnamelistContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_statLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatLoop" ):
                listener.enterStatLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatLoop" ):
                listener.exitStatLoop(self)




    def statLoop(self):

        localctx = LuaParser.StatLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statLoop)
        self._la = 0 # Token type
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(LuaParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.varlist()
                self.state = 107
                self.match(LuaParser.T__1)
                self.state = 108
                self.explist()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.functioncall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.label()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.match(LuaParser.T__2)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.match(LuaParser.T__3)
                self.state = 114
                self.blockLoop()
                self.state = 115
                self.match(LuaParser.T__4)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 117
                self.match(LuaParser.T__5)
                self.state = 118
                self.exp(0)
                self.state = 119
                self.match(LuaParser.T__3)
                self.state = 120
                self.blockLoop()
                self.state = 121
                self.match(LuaParser.T__4)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 123
                self.match(LuaParser.T__6)
                self.state = 125 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 124
                        self.statLoop()

                    else:
                        raise NoViableAltException(self)
                    self.state = 127 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3 or _la==22:
                    self.state = 129
                    self.laststatB()


                self.state = 132
                self.match(LuaParser.T__7)
                self.state = 133
                self.exp(0)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 135
                self.match(LuaParser.T__8)
                self.state = 136
                self.exp(0)
                self.state = 137
                self.match(LuaParser.T__9)
                self.state = 138
                self.blockLoop()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11:
                    self.state = 139
                    self.match(LuaParser.T__10)
                    self.state = 140
                    self.exp(0)
                    self.state = 141
                    self.match(LuaParser.T__9)
                    self.state = 142
                    self.blockLoop()
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==12:
                    self.state = 149
                    self.match(LuaParser.T__11)
                    self.state = 150
                    self.blockLoop()


                self.state = 153
                self.match(LuaParser.T__4)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 155
                self.match(LuaParser.T__12)
                self.state = 156
                self.match(LuaParser.NAME)
                self.state = 157
                self.match(LuaParser.T__1)
                self.state = 158
                self.exp(0)
                self.state = 159
                self.match(LuaParser.T__13)
                self.state = 160
                self.exp(0)
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==14:
                    self.state = 161
                    self.match(LuaParser.T__13)
                    self.state = 162
                    self.exp(0)


                self.state = 165
                self.match(LuaParser.T__3)
                self.state = 166
                self.blockLoop()
                self.state = 167
                self.match(LuaParser.T__4)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 169
                self.match(LuaParser.T__12)
                self.state = 170
                self.namelist()
                self.state = 171
                self.match(LuaParser.T__14)
                self.state = 172
                self.explist()
                self.state = 173
                self.match(LuaParser.T__3)
                self.state = 174
                self.blockLoop()
                self.state = 175
                self.match(LuaParser.T__4)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 177
                self.match(LuaParser.T__15)
                self.state = 178
                self.funcname()
                self.state = 179
                self.funcbody()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 181
                self.match(LuaParser.T__16)
                self.state = 182
                self.match(LuaParser.T__15)
                self.state = 183
                self.match(LuaParser.NAME)
                self.state = 184
                self.funcbody()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 185
                self.match(LuaParser.T__16)
                self.state = 186
                self.attnamelist()
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 187
                    self.match(LuaParser.T__1)
                    self.state = 188
                    self.explist()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(LuaParser.VarlistContext,0)


        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def label(self):
            return self.getTypedRuleContext(LuaParser.LabelContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(LuaParser.BlockContext,i)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def blockLoop(self):
            return self.getTypedRuleContext(LuaParser.BlockLoopContext,0)


        def statLoop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatLoopContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatLoopContext,i)


        def laststatB(self):
            return self.getTypedRuleContext(LuaParser.LaststatBContext,0)


        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)


        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def attnamelist(self):
            return self.getTypedRuleContext(LuaParser.AttnamelistContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 278
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.match(LuaParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.varlist()
                self.state = 195
                self.match(LuaParser.T__1)
                self.state = 196
                self.explist()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 198
                self.functioncall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 199
                self.label()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 200
                self.match(LuaParser.T__3)
                self.state = 201
                self.block()
                self.state = 202
                self.match(LuaParser.T__4)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 204
                self.match(LuaParser.T__5)
                self.state = 205
                self.exp(0)
                self.state = 206
                self.match(LuaParser.T__3)
                self.state = 207
                self.blockLoop()
                self.state = 208
                self.match(LuaParser.T__4)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 210
                self.match(LuaParser.T__6)
                self.state = 212 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 211
                        self.statLoop()

                    else:
                        raise NoViableAltException(self)
                    self.state = 214 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                self.state = 217
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3 or _la==22:
                    self.state = 216
                    self.laststatB()


                self.state = 219
                self.match(LuaParser.T__7)
                self.state = 220
                self.exp(0)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 222
                self.match(LuaParser.T__8)
                self.state = 223
                self.exp(0)
                self.state = 224
                self.match(LuaParser.T__9)
                self.state = 225
                self.block()
                self.state = 233
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11:
                    self.state = 226
                    self.match(LuaParser.T__10)
                    self.state = 227
                    self.exp(0)
                    self.state = 228
                    self.match(LuaParser.T__9)
                    self.state = 229
                    self.block()
                    self.state = 235
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 238
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==12:
                    self.state = 236
                    self.match(LuaParser.T__11)
                    self.state = 237
                    self.block()


                self.state = 240
                self.match(LuaParser.T__4)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 242
                self.match(LuaParser.T__12)
                self.state = 243
                self.match(LuaParser.NAME)
                self.state = 244
                self.match(LuaParser.T__1)
                self.state = 245
                self.exp(0)
                self.state = 246
                self.match(LuaParser.T__13)
                self.state = 247
                self.exp(0)
                self.state = 250
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==14:
                    self.state = 248
                    self.match(LuaParser.T__13)
                    self.state = 249
                    self.exp(0)


                self.state = 252
                self.match(LuaParser.T__3)
                self.state = 253
                self.blockLoop()
                self.state = 254
                self.match(LuaParser.T__4)
                pass
